--- a/index.html
+++ b/index.html
@@ -1,74 +1,42 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <title>Program Oluşturucu</title>
-  <style>
-    body { font-family: sans-serif; }
-    input, select, button { margin: 4px; }
-    .box { border: 1px solid #ccc; padding: 10px; margin-bottom: 10px; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Otomatik Rotasyon Programı</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Program Oluşturucu</h1>
-<div id="authBox" class="box">
-  <h3>Giriş / Kayıt</h3>
+    <div class="container">
+        <h1>Laboratuvar Rotasyon Programı Oluşturucu</h1>
+        
+        <div id="status-message" class="message"></div>
 
-  <input id="email" type="email" placeholder="Email">
-  <input id="password" type="password" placeholder="Şifre">
+        <section class="controls">
+            <h2>1. Parametreler ve Kontenjanlar</h2>
 
-  <button onclick="login()">Giriş Yap</button>
-  <button onclick="register()">Kayıt Ol</button>
-  <button onclick="logout()" style="display:none" id="logoutBtn">
-    Çıkış Yap
-  </button>
+            <div id="input-personel-count">
+                <p>Kayıtlı Personel: <strong id="personel-sayisi">0</strong></p>
+            </div>
+            <div id="input-kontenjan-total">
+                <p>Toplam Kontenjan: <strong id="kontenjan-toplami">0</strong></p>
+            </div>
+            
+            <div id="bolum-listesi">
+                </div>
 
-  <p id="userInfo"></p>
-</div>
+            <button id="olustur-btn">Rotasyonu Oluştur</button>
+        </section>
 
-<div class="box">
-  <h3>Kişiler</h3>
-  <input id="personName" placeholder="Kişi adı">
-  <button onclick="addPerson()">Ekle</button>
-  <ul id="peopleList"></ul>
-</div>
+        <section class="results">
+            <h2>2. Oluşturulan Program</h2>
+            <div id="rotasyon-tablosu-alani">
+                </div>
+        </section>
+    </div>
 
-<div class="box">
-  <h3>Bölümler</h3>
-  <input id="deptName" placeholder="Bölüm adı">
-  <input id="deptCap" type="number" placeholder="Kontenjan">
-  <button onclick="addDepartment()">Ekle</button>
-  <ul id="deptList"></ul>
-</div>
-
-<div class="box">
-  <h3>Takvim Ayarları</h3>
-
-  Başlangıç:
-  <input type="date" id="startDate"><br>
-
-  Süre:
-  <input type="number" id="duration" value="4">
-  <select id="durationType">
-    <option value="day">Gün</option>
-    <option value="week">Hafta</option>
-    <option value="month">Ay</option>
-  </select><br>
-
-  Rotasyon:
-  <input type="number" id="rotation" value="1">
-  <select id="rotationType">
-    <option value="day">Gün</option>
-    <option value="week">Hafta</option>
-    <option value="month">Ay</option>
-  </select>
-</div>
-
-<button id="generate">Takvim Oluştur</button>
-
-<pre id="output"></pre>
-<div id="scheduleView"></div>
-<script type="module" src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="script.js"></script>
 </body>
 </html>
