--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <section class="results">
                 <h2>2. Oluşturulan Program</h2>
-                <div id="rotasyon-tablosu-alani">
+                <div id="rotasyon-sonuc-alani">
                     </div>
             </section>
         </div>
